Fix file paths for GitHub Pages deployment

--- a/social.html
+++ b/social.html
@@ -386,7 +386,7 @@
             <span class="social-text">YouTube</span>
         </a>
         <a href="https://namemc.com/profile/_wokie.1" class="social-link namemc">
-            <img src="../face.png" alt="NameMC" class="icon">
+            <img src="face.png" alt="NameMC" class="icon">
             <span class="social-text">NameMC</span>
         </a>
     </div>
