Update website files

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div class="terminal-output">Wok information. [Version 9.2.2008]
 (c) MaiLand. All rights reserved.
 
+Need help? Type "help" for more information.
+
 </div>
             <div class="command-line">
                 <span class="prompt">C:\Users\Guest></span>
