--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Windows Terminal</title>
+    <meta name="description" content="Interactive Windows Terminal Emulator">
+    <meta name="author" content="MaiLand">
+    <title>Windows Terminal Emulator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <div class="terminal" id="draggableTerminal">
@@ -21,7 +23,7 @@
             </div>
         </div>
         <div class="terminal-content">
-            <div class="terminal-output">Wok information. [Version 9.2.2008]
+            <div class="terminal-output">Wok information. [Version 9.5.2008]
 (c) MaiLand. All rights reserved.
 
 Need help? Type "help" for more information.
